<resources>
    <string name="app_name">Movie</string>
    <string name="back">back</string>
    <string name="movie_title_details">Avengers: \nEnd Game</string>
    <string name="age_limit_13">13+</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="reviews">REVIEWS</string>
    <string name="count_reviews">125</string>
    <string name="storyline">Storyline</string>
    <string name="text_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="name_1">Robert Downey Jr.</string>
    <string name="name_2">Chris Evans</string>
    <string name="name_3">Mark Ruffalo</string>
    <string name="name_4">Chris Hemsworth</string>
    <string name="description_first_star">Film\'s first star rating</string>
    <string name="description_second_star">Film\'s second star rating</string>
    <string name="description_third_star">Film\'s third star rating</string>
    <string name="description_fourth_star">Film\'s fourth star rating</string>
    <string name="description_fifth_star">Film\'s fifth star rating</string>
    <string name="description_first_pic">Image of the first actor</string>
    <string name="description_second_pic">Image of the second actor</string>
    <string name="description_third_pic">Image of the third actor</string>
    <string name="description_fourth_pic">Image of the fourth actor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list_tittle">Movies list</string>
    <string name="description_bgc_item_list">Movie cover</string>
    <string name="movie_title_list">Avengers: End Game</string>
    <string name="count_duration">137</string>
    <string name="movie_duration">MIN</string>
    <string name="description_like">like the movie</string>
    <string name="description_icon_movie">crosshair icon</string>
</resources>