<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_poster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_background_poster"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="42dp"
        android:layout_height="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/age_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/age_limit_18"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movie_title_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_title_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="222dp"
        android:text="@string/movie_title_details"
        android:textColor="@color/white_H1_H6"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/genre"
        android:textColor="@color/pink_genre"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_details" />

    <ImageView
        android:id="@+id/first_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/star_icon_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres"
        app:layout_constraintEnd_toStartOf="@id/second_star"
        android:contentDescription="@string/description_first_star" />

    <ImageView
        android:id="@+id/second_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_icon_pink"
        android:layout_marginEnd="3dp"
        app:layout_constraintStart_toEndOf="@id/first_star"
        app:layout_constraintTop_toTopOf="@id/first_star"
        app:layout_constraintEnd_toStartOf="@id/third_star"
        android:contentDescription="@string/description_second_star" />

    <ImageView
        android:id="@+id/third_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:src="@drawable/star_icon_pink"
        app:layout_constraintStart_toEndOf="@id/second_star"
        app:layout_constraintTop_toTopOf="@+id/second_star"
        app:layout_constraintEnd_toStartOf="@id/fourth_star"
        android:contentDescription="@string/description_third_star" />

    <ImageView
        android:id="@+id/fourth_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_icon_pink"
        app:layout_constraintStart_toEndOf="@id/third_star"
        app:layout_constraintTop_toTopOf="@id/third_star"
        app:layout_constraintEnd_toStartOf="@id/fifth_star"
        android:contentDescription="@string/description_fourth_star" />

    <ImageView
        android:id="@+id/fifth_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_icon_grey"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/fourth_star"
        app:layout_constraintTop_toTopOf="@id/fourth_star"
        android:contentDescription="@string/description_fifth_star" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/reviews"
        android:textColor="@color/reviews_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/fifth_star"
        app:layout_constraintTop_toBottomOf="@id/genres" />


    <TextView
        android:id="@+id/storyline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/storyline"
        android:textColor="@color/white_H1_H6"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_star" />

    <TextView
        android:id="@+id/text_storyline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_storyline"
        android:textColor="@color/white_text_storyline"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyline" />


    <TextView
        android:id="@+id/cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/cast"
        android:textColor="@color/white_H1_H6"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_storyline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cast"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/view_holder_actor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>